Final commit, requisitos completos